[gd_scene load_steps=23 format=2]

[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai201.png" type="Texture" id=1]
[ext_resource path="res://GFX/Player/sprite_03.png" type="Texture" id=2]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai207.png" type="Texture" id=3]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai208.png" type="Texture" id=4]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai210.png" type="Texture" id=5]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai209.png" type="Texture" id=6]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai212.png" type="Texture" id=7]
[ext_resource path="res://GFX/Player/sprite_05.png" type="Texture" id=8]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai213.png" type="Texture" id=9]
[ext_resource path="res://SFX/Weapons/35213__abyssmal__slashkut.wav" type="AudioStream" id=10]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai205.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=12]
[ext_resource path="res://SFX/Weapons/515625__mrickey13__throw-swipe.wav" type="AudioStream" id=13]
[ext_resource path="res://SFX/Player/422426__behansean__jumps-start.wav" type="AudioStream" id=14]
[ext_resource path="res://SFX/Player/406735__kretopi__steponwood-003.wav" type="AudioStream" id=15]
[ext_resource path="res://GFX/Player/sprite_02.png" type="Texture" id=16]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai211.png" type="Texture" id=17]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai206.png" type="Texture" id=18]
[ext_resource path="res://GFX/Player/Samurai 31 bit (1)/sprite_samurai214.png" type="Texture" id=19]
[ext_resource path="res://GFX/Player/sprite_04.png" type="Texture" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "wall_jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 5 ), ExtResource( 5 ) ],
"loop": false,
"name": "throwK",
"speed": 10.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "fall",
"speed": 20.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 2 ), ExtResource( 8 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ) ],
"loop": false,
"name": "attack",
"speed": 14.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": false,
"name": "flash",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "throwFall",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "throwJump",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.3514, 56.5284 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 200.605, 137.134 )
collision_mask = 2
script = ExtResource( 12 )

[node name="Animations" type="AnimatedSprite" parent="."]
position = Vector2( 0.715973, -13.2775 )
frames = SubResource( 1 )
animation = "walk"
frame = 1
playing = true

[node name="CollisionPlayer" type="CollisionShape2D" parent="."]
position = Vector2( -1.16238, 10.4922 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 100, -50 )
current = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 38.1478, 4.38386 )

[node name="Slash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="kunai" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WallRaycast" type="Node2D" parent="."]

[node name="LeftCast" type="RayCast2D" parent="WallRaycast"]
position = Vector2( -20, -9 )
rotation = 1.5708
scale = Vector2( 1, 0.3 )
enabled = true
collision_mask = 2

[node name="RightCast" type="RayCast2D" parent="WallRaycast"]
position = Vector2( 18, -9 )
rotation = -1.5708
scale = Vector2( 1, 0.3 )
enabled = true
collision_mask = 2

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="run" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = 24.0

[node name="TimerKunai" type="Timer" parent="."]
one_shot = true
[connection signal="animation_finished" from="Animations" to="." method="_on_Animations_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
